--- a/sftp.yml
+++ b/sftp.yml
@@ -1,10 +1,7 @@
 name: CI-SFTP
 
 # Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
+on: push
 #  pull_request:
 #    branches: [ main ]
 
@@ -23,8 +20,8 @@ jobs:
       - name: SFTP Deploy
         uses: wlixcc/SFTP-Deploy-Action@v1.2.1
         with:
-          username: logicism
-          server: logicism.ddns.net
+          username: root 
+          server: dsx.ninja 
           port: 22 # default is 22
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
@@ -32,7 +29,7 @@ jobs:
           # will put all file under this path
           local_path: ./* # default is ./*
           # files will copy to under remote_path
-          remote_path: /var/www
+          remote_path: /root
           
           # sftp args
           args: '-o ConnectTimeout=5'
