--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Tree Print
         run: tree ${{ github.workspace }}
+  Deploy:
     runs-on: self-hosted 
     steps:
       - name: Show System Inforamtion
