--- a/mirror.yml
+++ b/mirror.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: pixta-dev/repository-mirroring-action@v1
         with: 
           target_repo_url:
-            ${{ format('{0}:{1}.git', secrets.GITSERVER_ORIGIN, $GITHUB_REPOSITORY) }} 
+            ${{ format('{0}:{1}.git', secrets.GITSERVER_ORIGIN, github.repository) }} 
           ssh_private_key:
             ${{ secrets.SSH_PRIVATE_KEY }}
