--- a/mirror.yml
+++ b/mirror.yml
@@ -11,7 +11,6 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with: 
-          target_repo_url:
-            ${{ format('{0}:{1}.git', secrets.GITSERVER_ORIGIN, github.repository) }} 
+          target_repo_url: ${{ secrets.GITSERVER_ORIGIN }}:$GITHUB_REPOSITORY
           ssh_private_key:
             ${{ secrets.SSH_PRIVATE_KEY }}
