Update: updated action workflow (mirroing)

--- a/mirror.yml
+++ b/mirror.yml
@@ -11,6 +11,7 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with: 
-          target_repo_url: ${{ secrets.GITSERVER_ORIGIN }}:$GITHUB_REPOSITORY
+          target_repo_url:
+            ${{ format('{0}:{1}.git', secrets.GITSERVER_ORIGIN, github.) }} 
           ssh_private_key:
             ${{ secrets.SSH_PRIVATE_KEY }}
