--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -3,7 +3,7 @@ name: Mirroring
 on: [push, delete]
 
 jobs:
-  to_gitserver:
+  to_xiashura_gitserver:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -12,7 +12,7 @@ jobs:
       - uses: pixta-dev/repository-mirroring-action@v1
         with: 
           target_repo_url:
-            ${{ format('{0}/{1}.git', secrets.GITSERVER_ORIGIN, github.repository) }} 
+            ${{ format('git.zalupa.cloudl/{0}.git', github.repository) }} 
           ssh_private_key:
             ${{ secrets.SSH_PRIVATE_KEY }}
   to_gitlab:
