--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -12,9 +12,10 @@ jobs:
       - uses: pixta-dev/repository-mirroring-action@v1
         with: 
           target_repo_url:
-            ${{ format('git.zalupa.cloudl/{0}.git', github.repository) }} 
+            ${{ format('git.zalupa.cloud/{0}.git', github.repository) }} 
           ssh_private_key:
             ${{ secrets.SSH_PRIVATE_KEY }}
+
   to_gitlab:
     runs-on: ubuntu-20.04
     steps:
